# lab1_Volkov

./: CMakeLists.txt  README.md  main.c  mystring.c  mystring.h  safeinput.c  safeinput.h  test.c  test.h
