cmake_minimum_required(VERSION 3.27)
project(iwantc__ C)

set(CMAKE_C_STANDARD 17)
add_executable(iwantc__ main.c
        clearinput.h
        safeinput.c
        safeinput.h
        safeinput.h
        mystring.c
        mystring.h
        mystring.h
        dinamic_arr.c
        dinamic_arr.h
        dinamic_arr.h
        test.c
        test.h
)
